# motion-spec-ral

./: .gitignore  LICENSE.MIT-0  Makefile  README.md  check.py  count.py  ir_gen.py  namespace.py  resolver.py
.github/workflows/: gh-pages.yml
code-generator/: CMakeLists.txt  chain.stg  hddc2b.stg  kdl-config.stg  robif2b.stg  solver.stg  task.stg  tmpl.stg
docs/: robot.odg
misc/patches/: 0001-add-test-case-for-multiple-type-scoped-contexts.patch  0002-fix-multiple-type-scoped-contexts.patch
models/: application.json  sc0a-right-arm.json  sc0b-dual-arm.json  sc1.json  sc2.json
models/00-common/: 00-misc.json  01-world-model.json
models/01-right-arm/: 00-misc.json  01-world-model.json  02-map.json  02-view.json  03-constraints.json  04-motion-specification.json  05-constraint-handler.json  06-solver-specification.json
models/02-left-arm/: 00-misc.json  01-world-model.json  02-map.json  02-view.json  03-constraints.json  04-motion-specification.json  05-constraint-handler.json  06-solver-specification.json
models/03-scenarios/: 00-misc.json  01-world-model.json  02-map.json  02-view.json  03-constraints.json  04-motion-specification.json  05-constraint-handler.json
models/04-sc0a-right-arm/: 04-motion-specification.json  05-constraint-handler.json  06-solver-specification.json  07-scenario.json
models/04-sc0b-left-arm/: 04-motion-specification.json  05-constraint-handler.json  06-solver-specification.json  07-scenario.json
models/04-sc1/: 00-misc.json  01-world-model.json  05-constraint-handler.json  06-solver-specification.json  07-scenario.json
(+14 files in other folders)
